<resources>
    <string name="app_name">FinalProject</string>
    <string name="dealer_score">Dealer Score</string>
    <string name="finish">Finish</string>
    <string name="draw">Draw</string>
    <string name="_0">0</string>
    <string name="player_score">Player Score</string>
    <string name="help">Help</string>
    <string name="d">$%d</string>
    <string name="bet_d">Bet: $%d</string>
    <string name="instructions">Get closer to 21 than the dealer without going over.</string>
</resources>